# flipit

./: .gitignore  CMakeLists.txt
assets/: Lockscreen.bmx
src/: CMakeLists.txt  bm_utils.cpp  bm_utils.h  flipit.cpp  flipit.hpp
test/: CMakeLists.txt  main.cpp
